Atualizando o código